7/14/14 fix in GameView, where current equation is undefined until a level is selected (on startup and on reset)
7/14/14 Game: move timerEnabled property to view
7/14/14 Intro: move balancedRepresentation property from model to view
7/14/14 move view-specific properties out of models (soundEnabled, reactantsBoxExpanded, productsBoxExpanded)
7/14/14 change Equation.balancedAndSimplified from a Property to a field, nothing observes it
7/14/14 #27 change minX for reactant terms to left-edge of box, to fix layout problem with C2H5OH + 3O2 -> 2CO2 + 3H2O
7/14/14 remove weird couplings where HorizontalAligner was providing information about vertical dimension
7/14/14 completed HorizontalAligner refactor
7/14/14 first phase of HorizontalAligner refactor
7/14/14 internal cleanup of HorizontalAligner
7/14/14 fill in correct coefficients only when 'playAll' query parameter is set
7/14/14 encapsulate and document query parameters in BCEQueryParameters
7/14/14 #66 remove 'move' feature from game dialog
# 1.0.0-dev.8 7/11/14
7/11/14 remove erroneous RSC credit, no funding was provided for this sim according to KP
7/11/14 #27 move initial position of game dialog up, to account for shorter game boxes, so that dialog doesn't cover buttons
7/11/14 #27 reduce height of game boxes from 360 to 340, which still looks comfortable for PCl5
7/11/14 #27 move reverse of C2H5OH equation to 2nd location in level-3 pool
# 1.0.0-dev.7 7/11/14
7/11/14 #27 move equations that present layout problems to the beginning of their pools, so that they are displayed first in dev testing
7/11/14 when running in dev mode, fill in the correct coefficients in all pickers
7/11/14 #74 add 'Skip' button to game in dev mode
7/11/14 #71 scale diameter of starts in LevelCompletedNode for levels with lots of stars
7/11/14 #71 support different numbers of equations per game level, to support 'playAll' query parameter
7/11/14 #72 show correct coefficients when running in dev mode